Added default taskhandler
Added a default taskhandler class, to exchange messages and run processes automatically.

--- a/Message.cbp
+++ b/Message.cbp
@@ -32,14 +32,14 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="Main.cpp" />
-		<Unit filename="data.cpp" />
-		<Unit filename="data.h" />
 		<Unit filename="linked.cpp" />
 		<Unit filename="linked.h" />
 		<Unit filename="message.cpp" />
 		<Unit filename="message.h" />
 		<Unit filename="process.cpp" />
 		<Unit filename="process.h" />
+		<Unit filename="taskhandler.cpp" />
+		<Unit filename="taskhandler.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
